# ragged-cafe

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: coffee_review_exploration.ipynb
reports/: ideas.md
